# Gripper_sdk

./: .gitignore  CMakeLists.txt  README.md
cmake/: GripperSDKConfig.cmake.in
docs/: error_code.md  protocol.md
examples/: example_c_api.c  example_device.cpp  example_homing_c_api.c  example_main.cpp
inc/c_api/: gripper_c_api.h
inc/core/: gripper.h  gripper_device.h
inc/protocol/: crc.h  protocol.h
inc/transport/: i_transport.h  rs485_transport.h
src/: gripper_sdk.cpp
src/c_api/: gripper_c_api.cpp
src/core/: gripper.cpp  gripper_device.cpp
src/protocol/: crc.cpp  protocol.cpp
src/transport/: rs485_transport.cpp
tests/: tests.cpp
